// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add separators if not needed 1`] = `
<Popup
  className="disabled-pointer-events"
  placement="left-top"
  style={
    Object {
      "left": 476,
      "top": 30,
      "width": 250,
    }
  }
>
  <div
    className="project-activity-graph-tooltip"
  >
    <div
      className="project-activity-graph-tooltip-title spacer-bottom"
    >
      <DateTimeFormatter
        date={2011-10-01T22:01:00.000Z}
      />
    </div>
    <table
      className="width-100"
    >
      <tbody />
      <GraphsTooltipsContentCoverage
        addSeparator={false}
        measuresHistory={Array []}
        tooltipIdx={0}
      />
    </table>
  </div>
</Popup>
`;

exports[`should render correctly for issues graphs 1`] = `
<Popup
  className="disabled-pointer-events"
  placement="left-top"
  style={
    Object {
      "left": 476,
      "top": 30,
      "width": 250,
    }
  }
>
  <div
    className="project-activity-graph-tooltip"
  >
    <div
      className="project-activity-graph-tooltip-title spacer-bottom"
    >
      <DateTimeFormatter
        date={2011-10-01T22:01:00.000Z}
      />
    </div>
    <table
      className="width-100"
    >
      <tbody>
        <GraphsTooltipsContentIssues
          index={0}
          key="bugs"
          measuresHistory={Array []}
          name="bugs"
          tooltipIdx={0}
          translatedName="Bugs"
          value="Formated.3"
        />
        <GraphsTooltipsContentIssues
          index={1}
          key="code_smells"
          measuresHistory={Array []}
          name="code_smells"
          tooltipIdx={0}
          translatedName="Code Smells"
          value="Formated.18"
        />
        <GraphsTooltipsContentIssues
          index={2}
          key="vulnerabilities"
          measuresHistory={Array []}
          name="vulnerabilities"
          tooltipIdx={0}
          translatedName="Vulnerabilities"
          value="Formated.0"
        />
      </tbody>
    </table>
  </div>
</Popup>
`;

exports[`should render correctly for random graphs 1`] = `
<Popup
  className="disabled-pointer-events"
  placement="left-top"
  style={
    Object {
      "left": 476,
      "top": 30,
      "width": 250,
    }
  }
>
  <div
    className="project-activity-graph-tooltip"
  >
    <div
      className="project-activity-graph-tooltip-title spacer-bottom"
    >
      <DateTimeFormatter
        date={2011-10-25T10:27:41.000Z}
      />
    </div>
    <table
      className="width-100"
    >
      <tbody>
        <GraphsTooltipsContent
          index={0}
          key="bugs"
          name="bugs"
          translatedName="Bugs"
          value="Formated.0"
        />
        <GraphsTooltipsContent
          index={1}
          key="code_smells"
          name="code_smells"
          translatedName="Code Smells"
          value="Formated.15"
        />
        <GraphsTooltipsContent
          index={2}
          key="vulnerabilities"
          name="vulnerabilities"
          translatedName="Vulnerabilities"
          value="Formated.1"
        />
      </tbody>
    </table>
  </div>
</Popup>
`;
